2009/04/08
----------

* update DESCRIPTION (with homepage)
* support for describe function in package Hmisc