@@ -1,4 +1,4 @@
-ascii.list <- function(x, caption = "", caption.level = "", list.type = "bullet", ...) {
+ascii.list <- function(x, caption = "", caption.level = ".", list.type = "bullet", ...) {
     obj <- asciiList$new(x = x, caption = caption, caption.level = caption.level, list.type = list.type)
     class(obj) <- c("ascii", "proto", "environment")
     return(obj)
