@@ -1,4 +1,4 @@
-ascii.prcomp <- function (x, include.rownames = TRUE, include.colnames = TRUE, format = "f", digits = 2, decimal.mark = ".", na.print = "", caption = "", caption.level = "", width = 0, frame = "", grid = "", valign = "", header = TRUE, footer = FALSE, align = "", col.width = 1, style = "", ...){
+ascii.prcomp <- function (x, include.rownames = TRUE, include.colnames = TRUE, format = "f", digits = 2, decimal.mark = ".", na.print = "", caption = "", caption.level = ".", width = 0, frame = "", grid = "", valign = "", header = TRUE, footer = FALSE, align = "", col.width = 1, style = "", ...){
     y <- data.frame(x$rotation,check.names=FALSE)
     obj <- asciiDataFrame$new(y, include.rownames,
          include.colnames, format,
@@ -10,7 +10,7 @@ ascii.prcomp <- function (x, include.rownames = TRUE, include.colnames = TRUE, f
     return(obj)
 }
 
-ascii.summary.prcomp <- function (x, include.rownames = TRUE, include.colnames = TRUE, format = "f", digits = 2, decimal.mark = ".", na.print = "", caption = "", caption.level = "", width = 0, frame = "", grid = "", valign = "", header = TRUE, footer = FALSE, align = "", col.width = 1, style = "", ...){
+ascii.summary.prcomp <- function (x, include.rownames = TRUE, include.colnames = TRUE, format = "f", digits = 2, decimal.mark = ".", na.print = "", caption = "", caption.level = ".", width = 0, frame = "", grid = "", valign = "", header = TRUE, footer = FALSE, align = "", col.width = 1, style = "", ...){
     x <- data.frame(x$importance,check.names=FALSE)
     obj <- asciiDataFrame$new(x, include.rownames,
          include.colnames, format,
