@@ -1,3 +1,10 @@
+2009/04/27
+----------
+
+* add a caption.level argument
+* improve ascii.describe output (package Hmisc)
+
+
 2009/04/08
 ----------
 
